# message_broker_template_02_2024

./: .ruff.toml  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
app/: auth.py  repository.py  run.py  test_request_to_flask_api.py  utils.py
app/brokers_handlers/: message_broker.py  sqs.py
app/models/: sqs.py  tasks.py
